service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio
spec:
  selector:
    app: portfolio
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
